@@ -320,4 +320,5 @@ version 4.17 (2015-10-10)
     * Adds convenience ClientID(Identifier) constructor.
     * Adds convenience Audience(URI) and Audience(Identifier) constructors.
     * Adds convenience Issuer(URI) and Issuer(Identifier) constructors.
-
+    * Removes Apache Commons Codec dependency, switches to Nimbus JOSE+JWT
+      for BASE64 and BASE64 URL-safe encoding and decoding.
